# Document-processing-RAG-pipeline

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.py
docs/: test-report-2026-07-17.md  二阶段优化计划.md
docs/superpowers/plans/: 2026-07-17-phase1-implementation.md  2026-07-17-phase2-retrieval-generation.md
scripts/: download_models.py  test_e2e_pipeline.py
src/api/: __init__.py  app.py
src/api/routers/: __init__.py  (+4 more)
src/confidence/: __init__.py  fallback.py  scorer.py  threshold.py
src/config/: settings.py
src/domain/: __init__.py  chunk.py  document.py  enums.py  layout.py  table.py
src/generation/: __init__.py  citation.py  context_builder.py  llm_client.py  prompt_manager.py
src/index/: __init__.py  bm25_index.py  embedding.py  hybrid_search.py  shared.py  vector_store.py
src/ocr/: __init__.py  formula_recognizer.py  page_recognizer.py
src/parser/: __init__.py  chunker.py  layout_tree.py
src/pipeline/: __init__.py  orchestrator.py
src/retrieval/: __init__.py  query_rewriter.py  reranker.py  retriever.py
tests/integration/: test_api.py
tests/unit/: test_api_schemas.py  test_bm25_index.py  test_chunker.py  test_citation.py  test_context_builder.py  test_domain.py  test_embedding.py  test_fallback.py  test_hybrid_search.py  test_layout_detector.py  test_layout_tree.py  test_llm_client.py  test_ocr_engine.py  test_orchestrator.py  test_pdf_loader.py  test_prompt_manager.py  test_query_rewriter.py  test_reranker.py  test_retriever.py  test_scorer.py  test_table.py  test_threshold.py  test_vector_store.py  test_word_loader.py
(+19 files in other folders)
