[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "rag-pipeline"
version = "0.1.0"
description = "工业级 RAG 文档处理流水线"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.5.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "easyocr>=1.7.0",
    "FlagEmbedding>=1.3.0",
    "qdrant-client>=1.16.0",
    "rank-bm25>=0.2.2",
    "paddlepaddle>=3.0.0",
    "paddlex>=3.7.0",
    "paddleocr>=3.7.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
